--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap");
 
+:root {
+  --font-ja: "Noto Sans JP", sans-serif;
+  --font-en: "Ubuntu", sans-serif;
+}
 .app {
-  font-family: "Ubuntu", sans-serif;
-  font-size: 16px;
+  font-family: var(--font-ja);
   line-height: 2;
   color: #333;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.03em;
 }
